bindings/go/wdissector/wdissector.h

typedef struct _GPtrArray GPtrArray;
struct _GPtrArray {
    gpointer *pdata;
    guint len;
};
// --- Fields related functions (string) ---
header_field_info *packet_get_header_info(const char *field_name);
header_field_info *packet_register_set_field_hfinfo(const char *field_name); // Register and set field
int packet_get_field_exists(const char *field_name);
field_info *packet_get_field(const char *field_name);
const char *packet_get_field_name(const char *field_name);   // Return field name
const char *packet_get_field_string(const char *field_name); // Return fiels value string
uint32_t packet_get_field_offset(const char *field_name);    // Read field offset
uint32_t packet_get_field_size(const char *field_name);      // Read field size
uint64_t packet_get_field_bitmask(const char *field_name);   // Read field mask (for bitfields)
uint32_t packet_get_field_encoding(const char *field_name);  // Read field encoding (little or big endian)
int packet_get_field_type(const char *field_name);           // Read field type (wireshark equivalent type)
const char *packet_get_field_type_name(const char *field_name);
const char *packet_get_field_encoding_name(const char *field_name);
uint32_t packet_get_field_uint32(const char *field_name);
// --- Fields related functions (field_info - faster) ---

// GET field by header info (header_field_info)
void packet_set_field_hfinfo(header_field_info *hfi);         // Set field (must be called before dissection)
void packet_set_field_hfinfo_all(header_field_info *hfi);     // Set all fields with same name field (must be called before dissection)
int packet_read_field_exists_hfinfo(header_field_info *hfi);  // Check if field with the same hfi exists in packet
field_info *packet_read_field_hfinfo(header_field_info *hfi); // Read field information structure
GPtrArray *packet_read_fields_hfinfo(header_field_info *hfi); // Read multiple fields information structure
// GET field by internal index (hfi_index)
gboolean packet_register_field(const char *field_name, uint16_t field_hfi_index); // Register target field
void packet_register_set_field(const char *field_name, uint16_t field_hfi_index); // Register and set field (simplify if caching is not needed)
void packet_set_field(uint16_t hfi_index);                                        // Set field (must be called before dissection)
field_info *packet_read_field(uint16_t hfi_index);                                // Read field information structure
GPtrArray *packet_read_fields(uint16_t hfi_index);                                // Read multiple fields information structure
// Common Fields functions
field_info *packet_read_field_at(GPtrArray *fields, uint16_t idx); // Read field from field information array
const char *packet_read_field_name(field_info *field_match);       // Return field name
const char *packet_read_field_abbrev(field_info *field_match);     // Return field abbreviation
uint16_t packet_read_field_offset(field_info *field_match);        // Read field offset
uint32_t packet_read_field_size(field_info *field_match);          // Read field size in aligned bytes
uint8_t packet_read_field_size_bits(uint64_t bitmask);             // Read field size in bits
unsigned long packet_read_field_bitmask(field_info *field_match);  // Read field mask (for bitfields)
uint8_t packet_read_field_bitmask_offset(uint64_t bitmask);        // Read field mask bit offset
uint8_t packet_read_field_bitmask_offset_msb(uint64_t bitmask);    // Read field mask from LSB
uint32_t packet_read_field_encoding(field_info *field_match);      // Read field encoding (little or big endian)
int packet_read_field_type(field_info *field_match);               // Read field type (wireshark equivalent type)
const char *packet_read_field_type_name(field_info *field_match);