bindings/python/wdissector.py


# src/wdissector.h: 177
for _lib in _libs.values():
    if not _lib.has("packet_get_header_info", "cdecl"):
        continue
    packet_get_header_info = _lib.get("packet_get_header_info", "cdecl")
    packet_get_header_info.argtypes = [String]
    packet_get_header_info.restype = POINTER(c_ubyte)
    packet_get_header_info.errcheck = lambda v,*a : cast(v, c_void_p)
    break

# src/wdissector.h: 178
for _lib in _libs.values():
    if not _lib.has("packet_register_set_field_hfinfo", "cdecl"):
        continue
    packet_register_set_field_hfinfo = _lib.get("packet_register_set_field_hfinfo", "cdecl")
    packet_register_set_field_hfinfo.argtypes = [String]
    packet_register_set_field_hfinfo.restype = POINTER(c_ubyte)
    packet_register_set_field_hfinfo.errcheck = lambda v,*a : cast(v, c_void_p)
    break

# src/wdissector.h: 179
for _lib in _libs.values():
    if not _lib.has("packet_get_field_exists", "cdecl"):
        continue
    packet_get_field_exists = _lib.get("packet_get_field_exists", "cdecl")
    packet_get_field_exists.argtypes = [String]
    packet_get_field_exists.restype = c_int
    break

# src/wdissector.h: 180
for _lib in _libs.values():
    if not _lib.has("packet_get_field", "cdecl"):
        continue
    packet_get_field = _lib.get("packet_get_field", "cdecl")
    packet_get_field.argtypes = [String]
    packet_get_field.restype = POINTER(c_ubyte)
    packet_get_field.errcheck = lambda v,*a : cast(v, c_void_p)
    break

# src/wdissector.h: 181
for _lib in _libs.values():
    if not _lib.has("packet_get_field_name", "cdecl"):
        continue
    packet_get_field_name = _lib.get("packet_get_field_name", "cdecl")
    packet_get_field_name.argtypes = [String]
    packet_get_field_name.restype = c_char_p
    break

# src/wdissector.h: 182
for _lib in _libs.values():
    if not _lib.has("packet_get_field_string", "cdecl"):
        continue
    packet_get_field_string = _lib.get("packet_get_field_string", "cdecl")
    packet_get_field_string.argtypes = [String]
    packet_get_field_string.restype = c_char_p
    break

# src/wdissector.h: 183
for _lib in _libs.values():
    if not _lib.has("packet_get_field_offset", "cdecl"):
        continue
    packet_get_field_offset = _lib.get("packet_get_field_offset", "cdecl")
    packet_get_field_offset.argtypes = [String]
    packet_get_field_offset.restype = c_uint
    break

# src/wdissector.h: 184
for _lib in _libs.values():
    if not _lib.has("packet_get_field_size", "cdecl"):
        continue
    packet_get_field_size = _lib.get("packet_get_field_size", "cdecl")
    packet_get_field_size.argtypes = [String]
    packet_get_field_size.restype = c_uint
    break

# src/wdissector.h: 185
for _lib in _libs.values():
    if not _lib.has("packet_get_field_bitmask", "cdecl"):
        continue
    packet_get_field_bitmask = _lib.get("packet_get_field_bitmask", "cdecl")
    packet_get_field_bitmask.argtypes = [String]
    packet_get_field_bitmask.restype = c_ulong
    break

# src/wdissector.h: 186
for _lib in _libs.values():
    if not _lib.has("packet_get_field_encoding", "cdecl"):
        continue
    packet_get_field_encoding = _lib.get("packet_get_field_encoding", "cdecl")
    packet_get_field_encoding.argtypes = [String]
    packet_get_field_encoding.restype = c_uint
    break

# src/wdissector.h: 187
for _lib in _libs.values():
    if not _lib.has("packet_get_field_type", "cdecl"):
        continue
    packet_get_field_type = _lib.get("packet_get_field_type", "cdecl")
    packet_get_field_type.argtypes = [String]
    packet_get_field_type.restype = c_int
    break

# src/wdissector.h: 188
for _lib in _libs.values():
    if not _lib.has("packet_get_field_type_name", "cdecl"):
        continue
    packet_get_field_type_name = _lib.get("packet_get_field_type_name", "cdecl")
    packet_get_field_type_name.argtypes = [String]
    packet_get_field_type_name.restype = c_char_p
    break

# src/wdissector.h: 189
for _lib in _libs.values():
    if not _lib.has("packet_get_field_encoding_name", "cdecl"):
        continue
    packet_get_field_encoding_name = _lib.get("packet_get_field_encoding_name", "cdecl")
    packet_get_field_encoding_name.argtypes = [String]
    packet_get_field_encoding_name.restype = c_char_p
    break

# src/wdissector.h: 190
for _lib in _libs.values():
    if not _lib.has("packet_get_field_uint32", "cdecl"):
        continue
    packet_get_field_uint32 = _lib.get("packet_get_field_uint32", "cdecl")
    packet_get_field_uint32.argtypes = [String]
    packet_get_field_uint32.restype = c_uint
    break

# src/wdissector.h: 195
for _lib in _libs.values():
    if not _lib.has("packet_set_field_hfinfo", "cdecl"):
        continue
    packet_set_field_hfinfo = _lib.get("packet_set_field_hfinfo", "cdecl")
    packet_set_field_hfinfo.argtypes = [POINTER(None)]
    packet_set_field_hfinfo.restype = None
    break

# src/wdissector.h: 196
for _lib in _libs.values():
    if not _lib.has("packet_set_field_hfinfo_all", "cdecl"):
        continue
    packet_set_field_hfinfo_all = _lib.get("packet_set_field_hfinfo_all", "cdecl")
    packet_set_field_hfinfo_all.argtypes = [POINTER(None)]
    packet_set_field_hfinfo_all.restype = None
    break

# src/wdissector.h: 197
for _lib in _libs.values():
    if not _lib.has("packet_read_field_exists_hfinfo", "cdecl"):
        continue
    packet_read_field_exists_hfinfo = _lib.get("packet_read_field_exists_hfinfo", "cdecl")
    packet_read_field_exists_hfinfo.argtypes = [POINTER(None)]
    packet_read_field_exists_hfinfo.restype = c_int
    break

# src/wdissector.h: 198
for _lib in _libs.values():
    if not _lib.has("packet_read_field_hfinfo", "cdecl"):
        continue
    packet_read_field_hfinfo = _lib.get("packet_read_field_hfinfo", "cdecl")
    packet_read_field_hfinfo.argtypes = [POINTER(None)]
    packet_read_field_hfinfo.restype = POINTER(c_ubyte)
    packet_read_field_hfinfo.errcheck = lambda v,*a : cast(v, c_void_p)
    break

# src/wdissector.h: 199
for _lib in _libs.values():
    if not _lib.has("packet_read_fields_hfinfo", "cdecl"):
        continue
    packet_read_fields_hfinfo = _lib.get("packet_read_fields_hfinfo", "cdecl")
    packet_read_fields_hfinfo.argtypes = [POINTER(None)]
    packet_read_fields_hfinfo.restype = POINTER(GPtrArray)
    break

# src/wdissector.h: 201
for _lib in _libs.values():
    if not _lib.has("packet_register_field", "cdecl"):
        continue
    packet_register_field = _lib.get("packet_register_field", "cdecl")
    packet_register_field.argtypes = [String, c_ushort]
    packet_register_field.restype = c_ubyte
    break

# src/wdissector.h: 202
for _lib in _libs.values():
    if not _lib.has("packet_register_set_field", "cdecl"):
        continue
    packet_register_set_field = _lib.get("packet_register_set_field", "cdecl")
    packet_register_set_field.argtypes = [String, c_ushort]
    packet_register_set_field.restype = None
    break

# src/wdissector.h: 203
for _lib in _libs.values():
    if not _lib.has("packet_set_field", "cdecl"):
        continue
    packet_set_field = _lib.get("packet_set_field", "cdecl")
    packet_set_field.argtypes = [c_ushort]
    packet_set_field.restype = None
    break

# src/wdissector.h: 204
for _lib in _libs.values():
    if not _lib.has("packet_read_field", "cdecl"):
        continue
    packet_read_field = _lib.get("packet_read_field", "cdecl")
    packet_read_field.argtypes = [c_ushort]
    packet_read_field.restype = POINTER(c_ubyte)
    packet_read_field.errcheck = lambda v,*a : cast(v, c_void_p)
    break

# src/wdissector.h: 205
for _lib in _libs.values():
    if not _lib.has("packet_read_fields", "cdecl"):
        continue
    packet_read_fields = _lib.get("packet_read_fields", "cdecl")
    packet_read_fields.argtypes = [c_ushort]
    packet_read_fields.restype = POINTER(GPtrArray)
    break

# src/wdissector.h: 207
for _lib in _libs.values():
    if not _lib.has("packet_read_field_at", "cdecl"):
        continue
    packet_read_field_at = _lib.get("packet_read_field_at", "cdecl")
    packet_read_field_at.argtypes = [POINTER(GPtrArray), c_ushort]
    packet_read_field_at.restype = POINTER(c_ubyte)
    packet_read_field_at.errcheck = lambda v,*a : cast(v, c_void_p)
    break

# src/wdissector.h: 208
for _lib in _libs.values():
    if not _lib.has("packet_read_field_name", "cdecl"):
        continue
    packet_read_field_name = _lib.get("packet_read_field_name", "cdecl")
    packet_read_field_name.argtypes = [POINTER(None)]
    packet_read_field_name.restype = c_char_p
    break

# src/wdissector.h: 209
for _lib in _libs.values():
    if not _lib.has("packet_read_field_abbrev", "cdecl"):
        continue
    packet_read_field_abbrev = _lib.get("packet_read_field_abbrev", "cdecl")
    packet_read_field_abbrev.argtypes = [POINTER(None)]
    packet_read_field_abbrev.restype = c_char_p
    break

# src/wdissector.h: 210
for _lib in _libs.values():
    if not _lib.has("packet_read_field_offset", "cdecl"):
        continue
    packet_read_field_offset = _lib.get("packet_read_field_offset", "cdecl")
    packet_read_field_offset.argtypes = [POINTER(None)]
    packet_read_field_offset.restype = c_ushort
    break

# src/wdissector.h: 211
for _lib in _libs.values():
    if not _lib.has("packet_read_field_size", "cdecl"):
        continue
    packet_read_field_size = _lib.get("packet_read_field_size", "cdecl")
    packet_read_field_size.argtypes = [POINTER(None)]
    packet_read_field_size.restype = c_uint
    break

# src/wdissector.h: 212
for _lib in _libs.values():
    if not _lib.has("packet_read_field_size_bits", "cdecl"):
        continue
    packet_read_field_size_bits = _lib.get("packet_read_field_size_bits", "cdecl")
    packet_read_field_size_bits.argtypes = [c_ulong]
    packet_read_field_size_bits.restype = c_ubyte
    break

# src/wdissector.h: 213
for _lib in _libs.values():
    if not _lib.has("packet_read_field_bitmask", "cdecl"):
        continue
    packet_read_field_bitmask = _lib.get("packet_read_field_bitmask", "cdecl")
    packet_read_field_bitmask.argtypes = [POINTER(None)]
    packet_read_field_bitmask.restype = c_ulong
    break

# src/wdissector.h: 214
for _lib in _libs.values():
    if not _lib.has("packet_read_field_bitmask_offset", "cdecl"):
        continue
    packet_read_field_bitmask_offset = _lib.get("packet_read_field_bitmask_offset", "cdecl")
    packet_read_field_bitmask_offset.argtypes = [c_ulong]
    packet_read_field_bitmask_offset.restype = c_ubyte
    break

# src/wdissector.h: 215
for _lib in _libs.values():
    if not _lib.has("packet_read_field_bitmask_offset_msb", "cdecl"):
        continue
    packet_read_field_bitmask_offset_msb = _lib.get("packet_read_field_bitmask_offset_msb", "cdecl")
    packet_read_field_bitmask_offset_msb.argtypes = [c_ulong]
    packet_read_field_bitmask_offset_msb.restype = c_ubyte
    break

# src/wdissector.h: 216
for _lib in _libs.values():
    if not _lib.has("packet_read_field_encoding", "cdecl"):
        continue
    packet_read_field_encoding = _lib.get("packet_read_field_encoding", "cdecl")
    packet_read_field_encoding.argtypes = [POINTER(None)]
    packet_read_field_encoding.restype = c_uint
    break

# src/wdissector.h: 217
for _lib in _libs.values():
    if not _lib.has("packet_read_field_type", "cdecl"):
        continue
    packet_read_field_type = _lib.get("packet_read_field_type", "cdecl")
    packet_read_field_type.argtypes = [POINTER(None)]
    packet_read_field_type.restype = c_int
    break

# src/wdissector.h: 218
for _lib in _libs.values():
    if not _lib.has("packet_read_field_type_name", "cdecl"):
        continue
    packet_read_field_type_name = _lib.get("packet_read_field_type_name", "cdecl")
    packet_read_field_type_name.argtypes = [POINTER(None)]
    packet_read_field_type_name.restype = c_char_p
    break
